Update CommandStatement.java