@@ -517,59 +517,6 @@ public class CommandStatement extends Statement{
 		return ret;
 	}
 
-	private int executeDelete(FileSource exec, ShellContext ctx) throws IOException {
-		List<String> cmd =  new ArrayList<>();
-		cmd.add(exec.getAbsolutePath());
-		byte [] data = exec.head(20);
-		if(data.length>=2 && data[0] == '#' && data[1] == '!') {
-			String tmp = new String(data).substring(2);
-			int idx1=tmp.lastIndexOf('\n');
-			if( idx1 > 0 ) {
-				tmp = tmp.substring(0,idx1).trim();
-				if(tmp.equals("fssh")) {
-					StringBuilder buf = new StringBuilder();
-					ProcessHandle.Info info = ProcessHandle.current().info();
-					String command = info.command().orElse("");
-					if( !command.isEmpty()) {
-						buf.append(command);
-						String[] arguments = info.arguments().orElse(new String[]{});
-						List<String> list = new ArrayList<>();
-						list.add(command);
-						list.add("--enable-native-access=ALL-UNNAMED");
-						for (int idx = 0; idx < 10; idx++) {
-							String arg = arguments[idx];
-							if( arg.equals("org.eclipse.jdt.internal.junit.runner.RemoteTestRunner")) {
-								break;
-							}
-							// anything past here is an argument and we want to use our own
-							if( arg.startsWith("us.bringardner")) {
-								break;
-							}
-							if( !arg.startsWith("-agentlib:") 
-									&& !arg.startsWith("-javaagent:")
-									) {
-								list.add(arg);
-								buf.append(" "+arg);
-							}
-
-						}
-						buf.append(" "+Console.class.getCanonicalName());
-						buf.append(" "+exec.getAbsolutePath());
-						list.add(Console.class.getCanonicalName());
-						list.add(exec.getAbsolutePath());
-						cmd = list;
-						System.out.println(buf);
-					}					
-				}
-			}
-		} 
-
-		
-		argsToString(cmd, ctx);
-		
-		return execute(cmd, ctx);
-	}
-
 	public static int execute(List<String> cmd, ShellContext ctx) throws IOException {
 		int ret = 0;
 		if(cmd!=null && cmd.size()>0) {
